# update-ec2-dns

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
docs/: aws.ec2@EC2InstanceStateChangeNotification-v1.json
src/: aws.rs  db.rs  ec2.rs  main.rs  route53.rs
