[package]
name = "update-ec2-dns"
version = "0.1.0"
edition = "2021"

[dependencies]

aws_lambda_events = "0.7"
chrono = { version = "0.4", features = ["serde"] }
lambda_runtime = "0.7"
serde = { version = "~1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
uuid = { version = "1", features = ["serde"] }
