[package]
name = "update-ec2-dns"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = "1"
aws-config = "0.54.1"
aws_lambda_events = "0.7"
aws-sdk-ec2 = "0.24"
aws-sdk-dynamodb = "0.24"
aws-sdk-route53 = "0.24"
chrono = { version = "0.4", features = ["serde"] }
lambda_runtime = "0.7"
serde = { version = "~1", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_24"]}
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
uuid = { version = "1", features = ["serde"] }

[profile.release]
lto = true
incremental = true
codegen-units = 1
panic = "abort"
strip = true
