[package]
name = "update-ec2-dns"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = "1"
aws-config = "0.56"
aws_lambda_events = "0.10"
aws-sdk-ec2 = "0.29"
aws-sdk-dynamodb = "0.29"
aws-sdk-route53 = "0.29"
chrono = { version = "0.4", features = ["serde"] }
lambda_runtime = "0.8"
serde = { version = "~1", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_29"]}
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
uuid = { version = "1", features = ["serde"] }

[profile.release]
lto = true
incremental = true
codegen-units = 1
panic = "abort"
strip = true
